--- a/index.html
+++ b/index.html
@@ -1,109 +1,330 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav>
-        <a href="./index.html">
-            WebStudio
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SIMPLY CHOCOLATE</title>
+    <link rel="short cut icon" href="./images/chocolate.png" />
+  </head>
+  <body>
+    <!--HEADER SECTION------------------------------------------------>
+    <header id="home">
+      <nav>
+        <a href="./index.html"
+          >SIMPLY CHOCOLATE
+          <img src="./images/chocolate.png" alt="Chocolate bar" width="24" height="24" />
         </a>
         <ul>
-            <li>
-                <a href="">Studio</a>
-            </li>
-            <li>
-                <a href="">Portfolio</a>
-            </li>
-            <li>
-                <a href="">Contacts</a>
-            </li>
-        </ul> 
-        </nav>
-        <address>
-            <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-            </ul>
-        </address>
+          <li>
+            <a href="#home">Home </a>
+          </li>
+          <li>
+            <a href="#made">How it’s made? </a>
+          </li>
+          <li>
+            <a href="#loved">Chocolate is loved </a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+            <img src="./images/icons/facebook.svg" alt="Facebook icon" width="24" height="24" />
+          </a>
+        </li>
+        <li>
+          <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+            <img src="./images/icons/instagram.svg" alt="instagram icon" width="24" height="24" />
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+            <img src="./images/icons/twitter.svg" alt="twitter icon" width="24" height="24" />
+          </a>
+        </li>
+      </ul>
     </header>
     <main>
-            <section>
-                <h1>Effective Solutions for Your Business
-                </h1>
-                <button type="button">Order Service</button>
-            </section>
-            <section>
-            <h2>Our principles</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>    
-            </ul>
-        </section>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li>
-                    <img src="./images/images1.jpg" alt="Monitor screen" width="360"/>
-                </li>
-                <li>
-                    <img src="./images/images2.jpg" alt="Phone display" width="360"/>
-                </li>
-                <li>
-                    <img src="./images/images3.jpg" alt="Laptop and phone in hands" width="360"/>
-                </li>
-            </ul>
-        </section>
-        <section>
-        <h2>Our Team</h2>
+      <!--HEROU SECTION 1------------------------------------------------------->
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+        </h1>
+        <div>
+          <button type="button">Buy now</button>
+          <a href="#made">How it’s made</a>
+          <a href=""
+            >scroll down
+            <img src="./images/icons/Vector.svg" alt="down icon" width="22" height="22" />
+          </a>
+        </div>
+      </section>
+      <!--BENEFITS SECTION 2------------------------------------------>
+      <section>
+        <h2>Benefits of our chocolate</h2>
         <ul>
-            <li> 
-                <img src="./images/img1.jpg" alt="Young man with a beard" width="264"/>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/img2.jpg" alt="A young, smiling man" width="264"/>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/img3.jpg" alt="Young girl with long hair" width="264"/>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img4.jpg" alt="A young, smiling man" width="264"/>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
+          <li>
+            <h3>Unsurpassed taste</h3>
+            <p>
+              Crafted with the finest quality cocoa beans and a dedication to perfection, each bite
+              is a decadent experience that simply cannot be matched. Savor the richness and
+              complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.
+            </p>
+          </li>
+          <li>
+            <h3>Affordable price</h3>
+            <p>
+              Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's
+              selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate
+              bars without sacrificing taste or quality. Browse our selection and indulge in
+              affordable luxury today.
+            </p>
+          </li>
+          <li>
+            <h3>Own production</h3>
+            <p>
+              We take pride in our own production process, ensuring that every step is carefully
+              crafted to perfection. From selecting the finest ingredients to handcrafting each
+              piece, our attention to detail is evident in every bite.
+            </p>
+          </li>
         </ul>
-    </section>    
+      </section>
+      <!--INGRIDIENTS SECTION 3----------------------------------------------------->
+      <section>
+        <h2>It all adds up to one exceptional <span>taste</span> sensation</h2>
+        <ul>
+          <li>
+            <img src="./images/img-1.png" alt="MILK CHOCOLATE" width="214" height="160" />
+            <h3>MILK CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./images/img-2.png" alt="MILK" width="214" height="160" />
+            <h3>MILK</h3>
+          </li>
+          <li>
+            <img src="./images/img-3.png" alt="NUTS" width="214" height="160" />
+            <h3>NUTS</h3>
+          </li>
+          <li>
+            <img src="./images/img-4.png" alt="SEMI - SWEET CHOCOLATE" width="214" height="160" />
+            <h3>SEMI - SWEET CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./images/img-5.png" alt="" width="214" height="160" />
+            <h3>CACAO</h3>
+          </li>
+          <li>
+            <img src="./images/img-6.png" alt="RASPBERRY" width="214" height="160" />
+            <h3>RASPBERRY</h3>
+          </li>
+          <li>
+            <img src="./images/img-7.png" alt="COCONUT OIL" width="214" height="160" />
+            <h3>COCONUT OIL</h3>
+          </li>
+        </ul>
+      </section>
+      <!--How it is made SECTION 4----------------------------------------------------->
+      <section id="made">
+        <h2>How it’s <span>made</span>?</h2>
+        <img
+          src="./images/how.jpg"
+          alt="Hot black chocolate is whipped with a whisk."
+          width="600"
+          height="400"
+        />
+        <div>
+          <h3>Try our chocolates today and discover the perfect balance of flavor</h3>
+          <ul>
+            <li>
+              <p>
+                Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa
+                powder.
+              </p>
+            </li>
+            <li>
+              <p>At the same time, prepare a water bath. Melt the butter on it.</p>
+            </li>
+            <li>
+              <p>
+                "Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone
+                spatula so that the mass becomes uniform and silky.
+              </p>
+            </li>
+            <li>
+              <p>Heat the mixture over low heat, letting it barely boil.</p>
+            </li>
+            <li>
+              <p>
+                Pour the chocolate into special containers (can be replaced with ice molds). Allow
+                to cool and harden.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Our products SECTION 5----------------------------------------------------->
+      <section>
+        <h2>Our <span>products</span></h2>
+        <ul>
+          <li>
+            <img src="./images/img-1.jpg" alt="Orange " width="230" height="201" />
+            <h3>Orange</h3>
+            <p>Dark chocolate/p></p>
+            <p>45 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-2.jpg" alt="Apple&Cranberry" width="230" height="201" />
+            <h3>Apple&Cranberry</h3>
+            <p>Milk chocolate</p>
+            <p>50 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-3.jpg" alt="Lime&Sea salt" width="230" height="201" />
+            <h3>Lime&Sea salt</h3>
+            <p>Dark chocolate</p>
+            <p>66 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-4.jpg" alt="Pineapple" width="230" height="201" />
+            <h3>Pineapple</h3>
+            <p>Dark chocolate</p>
+            <p>54 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-5.jpg" alt="" width="230" height="201" />
+            <h3>Classic</h3>
+            <p>Milk chocolate</p>
+            <p>45 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="Honey" width="230" height="201" />
+            <h3>Honey</h3>
+            <p>Milk chocolate</p>
+            <p>50 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-7.jpg" alt="Roasted fruits" width="230" height="201" />
+            <h3>Roasted fruits</h3>
+            <p>Dark chocolate</p>
+            <p>66 UAH</p>
+          </li>
+          <li>
+            <img src="./images/img-8.jpg" alt="Classic" width="230" height="201" />
+            <h3>Classic</h3>
+            <p>White chocolate</p>
+            <p>54 UAH</p>
+          </li>
+        </ul>
+      </section>
+      <!--Top sellers SECTION 6----------------------------------------------------->
+      <section>
+        <h1><span>Top</span> sellers</h1>
+        <ul>
+          <li>
+            <figure>
+              <img src="./images/img-1-2.jpg" alt="CHOCOLATE WITH NUTS" width="368" height="464" />
+              <figcaption>CHOCOLATE WITH NUTS</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/img-2-2.jpg"
+                alt="CHOCOLATE WITH FRUITS"
+                width="368"
+                height="464"
+              />
+              <figcaption>CHOCOLATE WITH FRUITS</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="./images/img-3-2.jpg" alt="DARK CHOCOLATE" width="368" height="464" />
+              <figcaption>DARK CHOCOLATE</figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+      <!--Chocolate is loved SECTION 7----------------------------------------------------->
+      <section id="loved">
+        <h2><span>Chocolate</span> is loved</h2>
+        <div>
+          <ul>
+            <li>
+              <img src="./images/img-9.png" alt="Victoria Dobrzhanska" />
+              <h3>Victoria Dobrzhanska</h3>
+              <p>
+                I love this chocolate bar. Perfect combination of light crispy wafer, covered in a
+                thin layer chocolate.
+              </p>
+            </li>
+            <li>
+              <img src="./images/img-10.png" alt="Nazar Babenko" />
+              <h3>Nazar Babenko</h3>
+              <p>
+                This chocolate confection is a delight! A delight! The wafer is light and crisp, the
+                hazelnut cream is smooth, and the chocolate is good.
+              </p>
+            </li>
+            <li>
+              <img src="./images/img-11.png" alt="Olena Kampusch" />
+              <h3>Olena Kampusch</h3>
+              <p>
+                Chocolate is a family favourite treat. Love the delicious smooth chocolate and the
+                creaminess inside. The wafer is soft but crunchy.
+              </p>
+            </li>
+          </ul>
+          <button type="button">Leave a review</button>
+        </div>
+      </section>
     </main>
-<footer>
-<a href="./index.html">WebStudio
-</a>
-<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
-</body>
-</html>                                  
+    <!--FOOTER SECTION----------------------------------------------------->
+    <footer>
+      <h2><span>Chocolate</span> a delicious cure for a bad day</h2>
+      <div>
+        <h3>Social networks</h3>
+        <ul>
+          <li>
+            <img src="./images/icons/instagram.svg" alt="instagram" width="24" height="24" />
+          </li>
+          <li>
+            <img src="./images/icons/facebook.svg" alt="instagram" width="24" height="24" />
+          </li>
+          <li>
+            <img src="./images/icons/twitter.svg" alt="instagram" width="24" height="24" />
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Contact us</h3>
+        <address>
+          <ul>
+            <li>
+              <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+            </li>
+            <li>
+              <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#home">Home </a>
+            </li>
+            <li>
+              <a href="#made">How it’s made? </a>
+            </li>
+            <li>
+              <a href="#loved">Chocolate is loved </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
+</html>
